RESOLVED FIXED282439
Timer lambdas should protect this before calling timeout function
https://bugs.webkit.org/show_bug.cgi?id=282439
Summary Timer lambdas should protect this before calling timeout function
Chris Dumez
Reported 2024-11-01 07:56:09 PDT
Timer lambdas should protect this before calling timeout function.
Attachments
Chris Dumez
Comment 1 2024-11-01 07:58:05 PDT
EWS
Comment 2 2024-11-01 11:18:31 PDT
Committed 286016@main (945acb34cd8b): <https://commits.webkit.org/286016@main> Reviewed commits have been landed. Closing PR #36046 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-01 11:19:14 PDT
Note You need to log in before you can comment on or make changes to this bug.