Timer lambdas should protect this before calling timeout function https://bugs.webkit.org/show_bug.cgi?id=282439

Reviewed by Ryosuke Niwa and Darin Adler.

* Source/WebCore/Modules/mediarecorder/MediaRecorder.cpp:
(WebCore::MediaRecorder::MediaRecorder):
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::Document):
* Source/WebCore/page/ios/ContentChangeObserver.cpp:
(WebCore::ContentChangeObserver::isContentChangeObserverEnabled):
(WebCore::ContentChangeObserver::ContentChangeObserver):
(WebCore::ContentChangeObserver::didInstallDOMTimer):
(WebCore::ContentChangeObserver::adjustObservedState):
* Source/WebCore/page/ios/ContentChangeObserver.h:
(WebCore::ContentChangeObserver::ref const):
(WebCore::ContentChangeObserver::deref const):

Canonical link: https://commits.webkit.org/286016@main