Source/WebCore/page/ios/ContentChangeObserver.h
@@ -35,6 +35,7 @@
 #include "Timer.h"
 #include "WKContentObservation.h"
 #include "WebAnimationTypes.h"
+#include <wtf/CheckedRef.h>
 #include <wtf/HashSet.h>
 #include <wtf/Seconds.h>
 #include <wtf/TZoneMalloc.h>
@@ -42,11 +43,6 @@
 
 namespace WebCore {
 class ContentChangeObserver;
-}
-
-namespace WTF {
-template<typename T> struct IsDeprecatedWeakRefSmartPointerException;
-template<> struct IsDeprecatedWeakRefSmartPointerException<WebCore::ContentChangeObserver> : std::true_type { };
 }
 
 namespace WebCore {
@@ -58,7 +54,7 @@ class Element;
 class ContentChangeObserver : public CanMakeWeakPtr<ContentChangeObserver> {
     WTF_MAKE_TZONE_ALLOCATED_EXPORT(ContentChangeObserver, WEBCORE_EXPORT);
 public:
-    ContentChangeObserver(Document&);
+    explicit ContentChangeObserver(Document&);
 
     WEBCORE_EXPORT void startContentObservationForDuration(Seconds duration);
     WEBCORE_EXPORT void stopContentObservation();
@@ -68,6 +64,9 @@ public:
 
     void didInstallDOMTimer(const DOMTimer&, Seconds timeout, bool singleShot);
     void didRemoveDOMTimer(const DOMTimer&);
+
+    void ref() const { m_document->ref(); }
+    void deref() const { m_document->deref(); }
 
     void didAddTransition(const Element&, const Animation&);
     void didFinishTransition(const Element&, CSSPropertyID);
@@ -220,7 +219,7 @@ private:
     };
     void adjustObservedState(Event);
 
-    Document& m_document;
+    CheckedRef<Document> m_document;
     Timer m_contentObservationTimer;
     WeakHashSet<const DOMTimer> m_DOMTimerList;
     WeakHashSet<const Element, WeakPtrImplWithEventTargetData> m_elementsWithTransition;
